Update to KiCAD 5 and minor changes in part selection

--- a/power-pcb/bom.ini
+++ b/power-pcb/bom.ini
@@ -13,6 +13,9 @@ merge_blank_fields = 1
 ; Field name used to determine if a particular part is to be fitted
 fit_field = Config
 
+include_version_number = 0
+
+
 [IGNORE_COLUMNS]
 ; Any column heading that appears here will be excluded from the Generated BoM
 ; Titles are case-insensitive
